更新新的yaml文件及生成的代码
