# openadk/models/__init__.py
@@ -84,6 +84,7 @@ from openadk.models.visions_analysis import VisionsAnalysis
 from openadk.models.visions_delete_tags import VisionsDeleteTags
 from openadk.models.visions_expression import VisionsExpression
 from openadk.models.visions_gender import VisionsGender
+from openadk.models.visions_get_request import VisionsGetRequest
 from openadk.models.visions_get_response import VisionsGetResponse
 from openadk.models.visions_photo import VisionsPhoto
 from openadk.models.visions_photo_list_response import VisionsPhotoListResponse
